edited some text

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img class="raed" src="images/raed.jpg" alt="" /></a>
-						<div class="content">
+						<a href="#" class="image icon "><img class="raed" src="images/raed.jpg" alt="" /></a>
+						<div class="content Synopsis">
 							<h3>Synopsis</h3>
-							<p class="Synopsis">Raed Ouerfelli Studies computer science, since he was passionate with computer and technologies. He loves music , and photography . So he passed some of his free time learning photoshop and some other photo editing softwares. Raed Dreams about making his own company and improving life conditions in his home town.</p>
+							<p>Raed ouerfelli is very passionate about informatics and technologies, ever since he was a child. So he chose to study the field of computing science. He loves photography and movies. And he spends some of his free time learning and developing his knowledge in some editing softwares including photoshop. Raed Dreams about making his own company and improving life conditions in his homeland.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-signal"><img class="little-me" src="images/little-me.jpg" alt="" /></a>
+						<a href="#" class="image icon"><img class="little-me" src="images/little-me.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Early Life</h3>
 							<p>Raed Ouerfelli was born on November 12, 1998 , in Siliana-Tunisia.He grew up in Krib-Siliana and then moved to Menzah 1-Tunis around the age of 18. </p>
@@ -64,8 +64,7 @@
 						<a href="#" class="image icon fa-code"><img class="aeroday" src="images/aeroday.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Education</h3>
-							<p>Raed studied in the primary school <em>20-mars 1956</em> and then moved to secondary school of <em>krib</em>
-								to end up studying in <em>Krib high school</em>. After graduating in 2017 from high school, he decided to start his new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies aswell web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
+							<p>Raed studied in the primary school <em>March 20 1956</em> for six years and spent three years in the elementary school of <em>krib</em>as for graduation he obtained it from <em>krib high school</em> at the age of eighteen. After graduating in 2017 ,he started a new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies aswell web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
 						</div>
 					</section>
 				</div>
