--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<a href="#" class="image icon fa-code"><img class="aeroday" src="images/aeroday.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Education</h3>
-							<p>Raed studied in the primary school <em>March 20 1956</em> for six years and spent three years in the elementary school of <em>krib</em> as for graduation he obtained it from <em>krib high school</em> at the age of eighteen. After graduating in 2017 ,he started a new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies aswell web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
+							<p>Raed studied in the primary school <em>March 20 1956</em> for six years and spent three years in the elementary school of <em>krib</em>. as for graduation he obtained it from <em>krib high school</em> at the age of eighteen. After graduating in 2017 ,he started a new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies as well web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
 						</div>
 					</section>
 				</div>
