deleted some text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a href="#" class="image icon "><img class="raed" src="images/raed.jpg" alt="" /></a>
 						<div class="content Synopsis">
 							<h3>Synopsis</h3>
-							<p>Raed ouerfelli is very passionate about informatics and technologies, ever since he was a child. So he chose to study the field of computing science. He loves photography and movies. And he spends some of his free time learning and developing his knowledge in some editing softwares including photoshop. Raed Dreams about making his own company and improving life conditions in his homeland.</p>
+							<p style="font-size: 17px; ">Raed ouerfelli is very passionate about informatics and technologies, ever since he was a child. So he chose to study the field of computing science. He loves photography and movies. And he spends some of his free time learning and developing his knowledge in some editing softwares including photoshop.</p>
 						</div>
 					</section>
 					<section class="feature right">
@@ -64,7 +64,7 @@
 						<a href="#" class="image icon fa-code"><img class="aeroday" src="images/aeroday.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Education</h3>
-							<p>Raed studied in the primary school <em>March 20 1956</em> for six years and spent three years in the elementary school of <em>krib</em>. as for graduation he obtained it from <em>krib high school</em> at the age of eighteen. After graduating in 2017 ,he started a new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies as well web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
+							<p >Raed studied in the primary school <em>March 20 1956</em> for six years and spent three years in the elementary school of <em>krib</em>. as for graduation he obtained it from <em>krib high school</em> at the age of eighteen. After graduating in 2017 ,he started a new journey in <em>"INSAT"</em> (national institute of applied sciences and technology). Raed studies as well web development in <a href="https://gomycode.tn/" target="_blank"> <em>GoMycode</em></a> and  <a href="https://www.edx.org/" target="_blank"><em>edx</em></a>.  </p>
 						</div>
 					</section>
 				</div>
